commit-20-book-mapper